@@ -4,6 +4,7 @@ New in version 1.2.1 (XXX 2009)
  * Bug fix for mis-identified advmod relation.
  * Improved word features, including comparative, superlative tagging, etc.
  * Fix crash on opencog output module, on comparative sentences.
+ * Fix: string substitution of "be" in frame rules (Fabricio)
 
 New in version 1.2.0 (12 October 2009)
  * Fixes DocSpliter fallback to behave when it is misconfigured.
